# Video-Super-Resolution-Library

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.Centos7.9  How to build.md  README.md  ReleaseNotes.md  build.sh  docker_build.sh
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/configs/: hadolint.yaml
.github/workflows/: build-baremetal-coverity.yml  build-baremetal-ubuntu.yml  codeql.yml  dependency-review.yml  docker-build.yml  docker-cached-build.yml  scorecard.yml  template-docker-cached-build.yml  trivy.yml
docker/: Dockerfile.centos7.9  Dockerfile.ubuntu18.04  Dockerfile.ubuntu22.04
docker/Flex/: Dockerfile.ubuntu22.04  nginx.conf
docker/Xeon/: Dockerfile.centos9  Dockerfile.rockylinux9  Dockerfile.rockylinux9-mini  Dockerfile.ubuntu18.04  Dockerfile.ubuntu20.04  Dockerfile.ubuntu22.04
docker/Xeon/yum/: oneAPI.repo
docs/: advanced usage  performance.md
ffmpeg/: 0001-ffmpeg-raisr-filter.patch  0002-libavfilter-raisr_opencl-Add-raisr_opencl-filter.patch  vf_raisr.c  vf_raisr_opencl.c
filters1/: filterbin_2_10
filters15_1pass_denoise_and_upscale/: Qfactor_cohbin_2_8  filterbin_2_10  filterbin_2_8  filternotes.txt
filters15_1pass_upscale_ipp/: filternotes.txt
filters15_1pass_upscale_mixed/: Qfactor_cohbin_2_8  Qfactor_strbin_2_8  filterbin_2_8  filternotes.txt
filters15_2pass_denoise_and_upscale/: Qfactor_cohbin_2_8_2  Qfactor_strbin_2_8_2  filterbin_2_8  filterbin_2_8_2
filters2/: Qfactor_cohbin_2_10_2  Qfactor_cohbin_2_8_2  Qfactor_strbin_2_10  Qfactor_strbin_2_10_2  Qfactor_strbin_2_8  Qfactor_strbin_2_8_2  filterbin_2_10  filterbin_2_10_2  filterbin_2_8  filterbin_2_8_2  filternotes.txt
filters3/: Qfactor_cohbin_2_8_2  Qfactor_strbin_2_8_2  filterbin_2_8_2  filternotes.txt
filters4/: Qfactor_cohbin_2_10_2  Qfactor_cohbin_2_8  Qfactor_cohbin_2_8_2  Qfactor_strbin_2_10  Qfactor_strbin_2_10_2  Qfactor_strbin_2_8  Qfactor_strbin_2_8_2  config  filterbin_2_10  filterbin_2_10_2  filterbin_2_8  filterbin_2_8_2  filternotes.txt
filters5/: config  filternotes.txt
filters6_denoise_and_upscale/: Qfactor_cohbin_2_10_2  Qfactor_cohbin_2_8_2  filterbin_2_10  filterbin_2_8_2
filters_1.5x/filters_denoise/: Qfactor_cohbin_2_8  Qfactor_strbin_2_8  filterbin_2_10  filterbin_2_8  filternotes.txt
filters_1.5x/filters_highres/: Qfactor_cohbin_2_8  Qfactor_strbin_2_8  filterbin_2_8  filternotes.txt
filters_2x/filters_denoise/: Qfactor_cohbin_2_8  Qfactor_strbin_2_10_2  Qfactor_strbin_2_8  filterbin_2_10_2  filternotes.txt
filters_2x/filters_highres/: Qfactor_cohbin_2_10  Qfactor_cohbin_2_10_2  Qfactor_strbin_2_8  Qfactor_strbin_2_8_2  config  filterbin_2_10  filterbin_2_10_2  filterbin_2_8
filters_2x/filters_lowres/: Qfactor_cohbin_2_10  Qfactor_cohbin_2_8_2  filterbin_2_8_2  filternotes.txt
scripts/: 01_pull_resources.sh  02_install_prerequisites.sh  03_build_raisr_ffmpeg.sh  common.sh
scripts/patch/ffmpeg/: 0001-avcodec-x86-mathops-clip-constants.patch
test/validation_suite/: create_wrong_files.sh  run_tests_avxout.sh
